# PyJHora

./: .gitattributes  .gitignore  .project  CLAUDE.md  Discrepancies.md  PARITY_EPIC.md  PARITY_REPORT.md  README.md  pyproject.toml  requirements.txt
frontend/: index.html
hora/: README.md  __init__.py  _package_info.py  const.py  features_per_book.txt  package_structure.md  setup.py  utils.py
hora/data/: Marriage_Compatibility-V3.0.5.csv  all_nak_pad_boy_girl.csv  all_nak_pad_boy_girl_south.csv  delme.csv  program_inputs.txt  uscities.csv  world_cities_with_tz.csv
hora/docs/: Hora-Horoscope-Dhasa.docx  Hora-Horoscope-Transit.docx  Hora-Panchanga.docx  Hora-Panchanga.htm  Hora-Utils.docx  Hora-Utils.htm
hora/horoscope/: README.md  __init__.py  horoscope.py  main.py  prediction.py
hora/lang/: dosha_msgs_te.json  list_values_en.txt  list_values_hi.txt  list_values_ka.txt  list_values_ml.txt  list_values_ta.txt  list_values_te.txt  msg_strings_en.txt  msg_strings_hi.txt  msg_strings_ka.txt  msg_strings_ta.txt  msg_strings_te.txt  prediction_msgs_en.json  prediction_msgs_hi.json  prediction_msgs_ka.json  prediction_msgs_ta.json  prediction_msgs_te.json  raja_yoga_msgs_en.json  yoga_msgs_en.json  yoga_msgs_hi.json  yoga_msgs_ka.json
hora/panchanga/: README.md  __init__.py  drik.py  drik1.py  khanda_khaadyaka.py  panchanga.py  search.py  surya_sidhantha.py  vratha.py
hora/tests/: __init__.py  book_chart_data.py  pvr_tests.py  stronger_rasi_examples.txt  test.py  test_ss.py  unit_tests.py
hora/ui/: __init__.py  chart_styles.py  horo_chart.py  horo_chart_tabs.py  match_ui.py  vakra_gathi_plot.py
jhora/: README.md  README_Package_Structure.md  _package_info.py  const.py  setup.py  utils.py
jhora/docs/: Hora-Horoscope-Chart.docx  Hora-Horoscope-Chart.htm  Hora-Horoscope-Dhasa.htm  Hora-Horoscope-Match.htm  Hora-Panchanga.docx  (+1 more)
pyjhora-web/: PARITY_ANALYSIS.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
src/: .project
tests/: conftest.py  pvr_tests.py  test_pyside_app.py
(+514 files in other folders)
