[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyJHora"
version = "3.5.8post2"
authors = [
	{name="Sundar Sundaresan",email = "Sundaram.Sundaresan@gmail.com"},
]
readme = "README.MD"
requires-python = ">=3.8"
keywords = ["Vedic Astrology", "Astrology", "Hindu Astrology", "Kundali", "Panchang", "Horoscope", "Hora", "JHora"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
[tool.setuptools.package-data]
"jhora.data" = ["*"]
"jhora.data.ephe" = ["*"]
"jhora.lang" = ["*"]
"jhora.images" = ["*"]
"jhora.tests" = ["*"]
"*" = ["*.txt", "*.csv","*.md", "*.json"]
[project.urls]
homepage = "https://github.com/naturalstupid/pyjhora"
repository = "https://github.com/naturalstupid/pyjhora"
Issues = "https://github.com/naturalstupid/pyjhora/issues"
